# check_centera

./: ChangeLog  Makefile.am  README  configure.in  nagios-plugins-centera.spec
contrib/: Makefile.am  check_centera.php
example-scripts/: Makefile.am  centera_capacity_availability  centera_network_status  centera_node_failures  centera_node_status  centera_replication_detail
plugin-dir/: Makefile.am  check_centera.pl
